# chromaprint-rs

./: .travis.yml  Cargo.toml  README.md
data/: stereo-sweep-1Hz-96KHz.flac
examples/: simple_fingerprint.rs
src/: algorithm.rs  context.rs  lib.rs
